カテゴリーの実装
csv無しでのやり方からありに変更csvの余計な記述を削除、カテゴリーテーブルからancestryカラム削除しadd_ancestry_to_categoryテーブルでancestryカラムをstring型で作成、
categories_controllerにshowアクション追加しshowビューにcategoryの名前とindexのpost表示を仮で表示、ホーム画面のゲストログインをログインしたら消えるように仕様変更
ルーティングのcategoryの記載をcategoriesに変更

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -29,6 +29,9 @@
           %p
             登録したユーザーやゲストログインでログインできます。ホーム画面からもゲストログインでログインすることができます。
     .text-btn
+    - if user_signed_in?
+      = link_to '', root_path
+    - else
       = link_to 'ゲストログインでログインする', users_guest_sign_in_path, method: :post, class: "btn btn-primary my-2"
   .album.py-5
     .container
