--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -30,11 +30,10 @@
             %li.nav-item.dropdown    
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                 カテゴリーから選ぶ
-              .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
+              %ul.dropdown-menu.left{"aria-labelledby" => "navbarDropdown"}
                 - @category_parent_array.each do |parent|
-                  .TopHeader__Inner__Lists__Left__Category__ParentCategories__List{data: {id: "#{parent.id}"}}
-                    = link_to "#{parent.name}",category_index_path(parent), class: "parent_category",id: "#{parent.id}"
-                  .children_list
+                  %li.TopHeader__Inner__Lists__Left__Category__ParentCategories__List
+                    = link_to "#{parent.name}",category_path(parent), class: "dropdown-item"
             %li.nav-item
               = link_to destroy_user_session_path, method: :delete, class: "nav-link" do
                 %i.fa.fa-user-minus
