--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "./header";
 @import "./footer";
 @import "./search";
+@import "./categoryshow";
 
 .content{
   min-height: calc(100vh - 70px);
