--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,16 +1,3 @@
-.title
-  = "#{@category.name}の商品一覧"
-  .album.py-5
-    .container
-      .row
-        .post
-        - @posts.each do |post|
-          .col-lg-3.col-md-6
-            .card
-              = image_tag post.image.url, class: "card-img-top"
-              .card-body
-                %h5.card-title= (post.title)
-                %p.card-genre= (post.category.name)
-                %span.card-price= "¥#{post.price.to_s(:delimited)}"
-                .border.border-white.mt-4
-                  = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+.container
+  %h1.categorytitle= "#{@category.name}の商品一覧"
+  = render 'posts/posts'
