posts、editのエラー修正

--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -11,8 +11,8 @@
         = f.label :title, '商品名'
         = f.text_field :title, class: 'form-control'
       .form-group
-        = f.label :genre, 'ジャンル'
-        = f.text_field :genre, class: 'form-group-text'
+        = f.label :category_id, 'カテゴリー'
+        = f.text_field :category_id, class: 'form-group-text'
       .form-group
         = f.label :price, '値段'
         = f.number_field :price, class: 'form-group-text'
