ホーム画面に説明の記載を追加

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -28,6 +28,14 @@
           ログイン機能
           %p
             登録したユーザーやゲストログインでログインできます。ホーム画面からもゲストログインでログインすることができます。
+        %li
+          カテゴリー検索機能
+          %p
+            投稿時に選択肢したカテゴリーで検索できます。
+        %li
+          アイテム・口コミ更新・削除機能
+          %p
+            投稿したアイテムや口コミを更新・削除ができます。
     .text-btn
     - if user_signed_in?
       = link_to '', root_path
