--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -17,7 +17,7 @@ body {
 main{
   .jumbotron.text-center{
     background-color: white;
-    border-bottom:px solid black;
+    border-bottom: 1px solid black;
   }
   .jumbotron-heading{
     font-weight: 300;
