商品名検索機能の説明の記載を追加

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -29,6 +29,10 @@
           %p
             登録したユーザーやゲストログインでログインできます。ホーム画面からもゲストログインでログインすることができます。
         %li
+          商品名検索機能
+          %p
+            投稿時に記入したタイトル名で検索できます。
+        %li
           カテゴリー検索機能
           %p
             投稿時に選択肢したカテゴリーで検索できます。
