--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -17,7 +17,7 @@
             会員登録することで自由に投稿することができます。
         %li
           %i.far.fa-star
-          口コミ機能
+          口コミ投稿機能
           %p
             PCパーツの感想を投稿できます。
         %li
