ルーティングにpolicy、privacypolicyを追加、ホーム画面の投稿アイテムを新着順に並び替え、新着アイテムの見出し追加、policyとprivacypolicyのビューを作成

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -6,6 +6,6 @@
     .col-md-3.col-sm-4.col-md-push-3
       %ul
         %li= link_to 'トップページ', root_path
-        
+        %li= link_to '', 
         
     
