--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,8 @@
 @import "./footer";
 @import "./search";
 @import "./categoryshow";
+@import "./policy";
+@import "./privacypolicy";
 
 .content{
   min-height: calc(100vh - 70px);
