--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -8,5 +8,5 @@
     .col-md-3.col-sm-4.col-md-push-3
       %ul
         %li= link_to 'トップページ', root_path
-        %li= link_to '利用契約', policy_path
+        %li= link_to '利用基準', policy_path
         %li= link_to 'プライバシーポリシー', privacypolicy_path
