policy.privacypolicyのcssの調整、インデントの修正

--- a/app/views/foorters/policy.html.haml
+++ b/app/views/foorters/policy.html.haml
@@ -1,11 +1,11 @@
-.container-g
+.container
   %h2 PCPARTS利用規約
   %p
     この規約は、PCPARTS（以下「本サービス」）をご利用頂く際の取扱いにつき定めるものです。本規約に同意した上で本サービスをご利用ください。
   %h4
     第1条（定義）
   %p
-   本規約上で使用する用語の定義は、次に掲げるとおりとします。
+    本規約上で使用する用語の定義は、次に掲げるとおりとします。
   %p
     （1）本サービス
   %p
