--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "./categoryshow";
 @import "./policy";
 @import "./privacypolicy";
+@import "./comment.edit";
+
 
 .content{
   min-height: calc(100vh - 70px);
