--- a/app/assets/stylesheets/_new.scss
+++ b/app/assets/stylesheets/_new.scss
@@ -1,3 +1,13 @@
-.h5.mb-4{
-  text-align: center;
+.container.mt-4 {
+  .h5.mb-4{
+    text-align: center;
+  }
+  .price_yen_sign {
+    margin-right: 10px;
+    margin-left: auto;
+  }
+
+  .price_number {
+    text-align: right;
+  }
 }
