--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -13,9 +13,10 @@
       .form-group
         = f.label :category_id, 'カテゴリー'
         = f.collection_select :category_id, Category.all, :id, :name, {include_blank: "カテゴリを選択してください"}, {class: 'form-control'}
-      .form-group
+      .form-inline
         = f.label :price, '値段'
-        = f.number_field :price, class: 'form-group-text'
+        %span.price_yen_sign ¥
+        = f.number_field :price, class: 'price_number', placeholder: "0"
       .form-group
         = f.label :text, '本文'
         = f.text_area :text, class: 'form-control', rows: "4"
