投稿詳細情報にあるボタンに余白を追加

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -23,6 +23,12 @@
     .btn.btn-outline-warning{
       background-color: white;
     }
+    .btn.btn-success{
+      margin-top: 10px;
+    }
+    .btn.btn-outline-info{
+      margin-top: 10px;
+    }
   }
 }
 .card-body{
