モータルウインドの追加

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -21,6 +21,7 @@
       white-space: nowrap;
       position: relative;
       margin:0 auto;
+      margin-top: 5px;
     }
     .container-2 input#search{
       margin-right: 10px;
