--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -43,3 +43,6 @@
               = link_to "ログイン", new_user_session_path, class: "nav-link"
             %li.nav-item
               = link_to "会員登録", new_user_registration_path, class: "nav-link"
+          %li.nav-item
+            #modal
+              %modal
