--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -2,6 +2,8 @@
   position: absolute;
   margin-top: 8px;
   margin-left: 10px;
+  cursor: pointer;
+  border-radius: 0.25rem;
 }
 [v-cloak]{
   display: none;
