vue.jsにbootstrapを追加、新規会員登録、ログインにボタン追加&位置を変更

--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -1,9 +1,7 @@
 .modal_span{
-  position: absolute;
-  margin-top: 8px;
-  margin-left: 10px;
-  cursor: pointer;
-  border-radius: 0.25rem;
+  display: inline-block;
+  padding: 8px 10px;
+  margin-right: 10px;
 }
 [v-cloak]{
   display: none;
