--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -28,6 +28,9 @@
               - @category_parent_array.each do |parent|
                 %li.TopHeader__Inner__Lists__Left__Category__ParentCategories__List
                   = link_to "#{parent.name}",category_path(parent), class: "dropdown-item"
+            %li.nav-item
+              #modal
+                %modal
           - if user_signed_in?
             %li.nav-item.dropdown
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
@@ -35,14 +38,11 @@
               .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
                 %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
             %li.nav-item
-              = link_to destroy_user_session_path, method: :delete, class: "nav-link" do
+              = link_to destroy_user_session_path, method: :delete, class: "nav-link btn " do
                 %i.fa.fa-user-minus
                 %span ログアウト     
           - else
             %li.nav-item
-              = link_to "ログイン", new_user_session_path, class: "nav-link"
+              = link_to "新規会員登録", new_user_registration_path, class: "nav-link btn btn-outline-danger"
             %li.nav-item
-              = link_to "新規会員登録", new_user_registration_path, class: "nav-link"
-          %li.nav-item
-            #modal
-              %modal
+              = link_to "ログイン", new_user_session_path, class: "nav-link btn btn-outline-primary"
