--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,9 @@
 @import "./flash_messages";
 @import "./modal";
 
+.breadcrumbs{
+  font-size: 20px;
+}
 
 .content{
   min-height: calc(100vh - 70px);
