--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
     = render 'shared/header'
     .container
       = render 'layouts/flash_messages'
+      %p= breadcrumbs separator: " &rsaquo; "
     .content
       = yield
     %footer.footer
