footerにtwitterのリンクを追加

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,6 +5,9 @@
         = link_to "PCPART", root_path
       %p
         %smail.d-block.mb-3 © 2020. All Rights Reserved.
+      .twitter
+        = link_to 'https://twitter.com/52BqT3mPcTLEore' do
+          %i.fab.fa-twitter
     .col-md-3.col-sm-4.col-md-push-3
       %ul
         %li= link_to 'トップページ', root_path
