--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -13,6 +13,12 @@ footer{
       font-size: 30px;
     }
   }
+  .twitter{
+    .fab.fa-twitter{
+      color: #1DA1F2;
+      font-size: 30px;
+    }
+  }
   .col-md-3.col-sm-4.col-md-push-3{
     li{
       margin: 0 0 14px 0;
