Dockerfileにyarnの項目を追加

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -6,12 +6,22 @@
         %span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse
         %ul.navbar-nav.mr-auto
+          %li.nav-item
+            #modal
+              %modal
           %li.nav-item.active
             .search-bar
               = search_form_for @q, url: search_posts_path, class: 'container-2' do |f|
                 = f.text_field :title_cont, id: 'search', placeholder: '商品名検索'
                 = button_tag type: 'submit', class: "search-btn" do
                   = icon('fas', 'search')
+          %li.nav-item.dropdown
+            %a#navbarDropdown.nav-link.btn.btn-outline-primary.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              カテゴリーから選ぶ
+            %ul.dropdown-menu.left{"aria-labelledby" => "navbarDropdown"}
+              - @category_parent_array.each do |parent|
+                %li.TopHeader__Inner__Lists__Left__Category__ParentCategories__List
+                  = link_to "#{parent.name}",category_path(parent), class: "dropdown-item"
           %li.nav-item      
             = link_to root_path, class: "nav-link btn btn-outline-success" do
               %i.fas.fa-home
@@ -21,19 +31,9 @@
             = link_to new_post_path, class: "nav-link btn btn-outline-success" do
               %i.far.fa-paper-plane
               %span 新規投稿
-          %li.nav-item.dropdown
-            %a#navbarDropdown.nav-link.btn.btn-outline-success.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-              カテゴリーから選ぶ
-            %ul.dropdown-menu.left{"aria-labelledby" => "navbarDropdown"}
-              - @category_parent_array.each do |parent|
-                %li.TopHeader__Inner__Lists__Left__Category__ParentCategories__List
-                  = link_to "#{parent.name}",category_path(parent), class: "dropdown-item"
-            %li.nav-item
-              #modal
-                %modal
           - if user_signed_in?
             %li.nav-item.dropdown
-              %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              %a#navbarDropdown.nav-link.btn.btn-outline-primary.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                 マイページ
               .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
                 %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
