詳細リンクボタンを削除し商品名をクリックしたら詳細画面に飛ぶように変更、font-sizeを変更、パンクズリストを編集

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -11,8 +11,6 @@
             .card
               = image_tag post.image.url, class: "card-img-top"
               .card-body
-                %h5.card-title= (post.title)
+                %p.card-title= link_to (post.title), post
                 %p.card-genre= (post.category.name)
-                %span.card-price= "¥#{post.price.to_s(:delimited)}"
-                .border.border-white.mt-4
-                  = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+                %span.card-price= "¥#{post.price.to_s(:delimited)}" 
