--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -7,9 +7,7 @@ body {
   margin: 0;
   background-repeat: repeat;
   background-size: cover;
-  font-family: 'Noto Sans Japanese',
-  'Source Sans Pro', Helvetica , Arial,
-  '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+  font-family: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', Osaka, sans-serif, arial, verdana, Helvetica, Verdana, "Droid Sans", Arial;
   a, input{
     outline: none;
   }
