--- a/app/views/posts/_posts.html.haml
+++ b/app/views/posts/_posts.html.haml
@@ -8,8 +8,7 @@
           .card
             = image_tag post.image.url, class: "card-img-top"
             .card-body
-              %h5.card-title= (post.title)
+              %p.card-title= link_to (post.title), post
               %p.card-genre= (post.category.name)
               %span.card-price= "¥#{post.price.to_s(:delimited)}"
-              .border.border-white.mt-4
-                = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+              
