font-sizeの変更、トップページに星評価、口コミ件数を表示

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -32,8 +32,12 @@
   }
 }
 .card-body{
+  font-size: 12px;
   .card-title{
     font-size: 14px;
+  }
+  .card-price{
+    color: red;
   }
 }
 .p-3.border{
