--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -6,10 +6,8 @@
         .card
           = image_tag post.image.url, class: "card-img-top"
           .card-body
-            %h5.card-title= (post.title)
+            %p.card-title= link_to (post.title), post
             %p.card-genre= (post.category.name)
-            %span.card-price= "¥#{number_with_delimiter(post.price)}"
-            .border.border-white.mt-4
-              = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+            %span.card-price= "¥#{number_with_delimiter(post.price)}" 
   - else
     %h1 検索に一致する商品はありませんでした
