ユーザー詳細画面,検索画面,カテゴリー別アイテム一覧に星評価、口コミ件数を表示

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,4 +10,7 @@
             %p.card-title= link_to (post.title), post
             %p.card-genre= (post.category.name)
             %span.card-price= "¥#{post.price.to_s(:delimited)}"
-            
+            .star
+              %span{id: "star-rate-#{post.id}"}
+              = render 'posts/read_rate', post: post
+            （口コミ #{post.comments.count} 件）
