--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -9,5 +9,9 @@
             %p.card-title= link_to (post.title), post
             %p.card-genre= (post.category.name)
             %span.card-price= "¥#{number_with_delimiter(post.price)}" 
+            .star
+              %span{id: "star-rate-#{post.id}"}
+              = render 'posts/read_rate', post: post
+            （口コミ #{post.comments.count} 件）
   - else
     %h1 検索に一致する商品はありませんでした
