--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,7 +6,7 @@
       .post_detail
         .panel.panel-default
           .panel-heading.text-center
-            = image_tag @posts.image.url, class: "card-img-top"
+            = image_tag @posts.image_url, class: "card-img-top"
           .panel-body
     .col-md-8
       %h4= @posts.title
