楽天APIの実装

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,3 +10,4 @@
     - else
       = link_to 'ゲストログインでログインする', users_guest_sign_in_path, method: :post, class: "btn btn-primary my-2"
   = render 'posts/posts'
+  = render 'rakutens/index'
