--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
-  - if @search.any?
-    - @search.each do |post|
+  - if @posts.any?
+    - @posts.each do |post|
       .col-lg-3.col-md-6
         .card
           = image_tag post.image_url, class: "card-img-top"
