--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
     - @user.posts.each do |post|
       .col-lg-3.col-md-6
         .card
-          = image_tag post.image.url, class: "card-img-top"
+          = image_tag post.image_url, class: "card-img-top"
           .card-body
             %p.card-title= link_to (post.title), post
             %p.card-genre= (post.category.name)
