--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,7 +12,7 @@
           %li.nav-item.active
             .search-bar
               = search_form_for @q, url: search_posts_path, class: 'container-2' do |f|
-                = f.text_field :title_cont, id: 'search', placeholder: '商品名検索'
+                = f.text_field :title_cont, id: 'search', placeholder: '投稿商品名検索'
                 = button_tag type: 'submit', class: "search-btn" do
                   = icon('fas', 'search')
             .search-bar
