--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,8 +1,8 @@
 .row.p-3{
   h2 {
-    text-align: center;
-    margin: 30px 0;
-    font-size: 30px;
+    text-align: left;
+    margin-bottom: 0.5em;
+    font-size: 1.5rem;
     width: 1170px;
     height: 33px;
   }
@@ -38,6 +38,9 @@
   }
   .card-price{
     color: red;
+  }
+  .card-text{
+    font-size: 1.125rem;
   }
 }
 .p-3.border{
