--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,11 @@
 .content{
   min-height: calc(100vh - 70px);
 }
+
+.container{
+  .col-lg-3.col-md-6{
+    .card{
+      margin-bottom: 10px;
+    }
+  }
+}
