commentの詳細の星評価が表示されていなかったので修正

--- a/app/views/comments/_posts.html.haml
+++ b/app/views/comments/_posts.html.haml
@@ -10,7 +10,7 @@
             評価：#{comment.rate}点 | #{comment.title}
           / 星評価
           %div{:id => "star-rate-#{comment.id}"}
-            = render 'comments/read_rate'
+            = render 'comments/read_rate', comment: comment
           / /星評価
           %p= comment.content
         .col-md-12.edit-button
