--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -19,6 +19,11 @@
     = f.label :content, '口コミ内容', class: 'col-md-3 col-form-label'
     .col-md-9
       = f.text_area :content, class: "form-control", rows: "8"
+  /口コミ用画像
+  .form-group.row
+    = f.label :picture, '口コミ画像', class: 'col-md-3 col-form-label'
+    .col-md-9
+      = f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', class: 'btn'
   / 確認ボタン
   .form-group.row.justify-content-end
     .col-md-9
