エラー修正、口コミ投稿フォームのサイズ修正

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -44,6 +44,8 @@
   }
 }
 .p-3.border{
+  width: 768px;
+  margin: 0 auto;
   border: 1px solid black !important;
   .mb-3{
     text-align: center;
