--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,5 @@
 %header
-  %nav.navbar.navbar-expand-lg.navbar-light.navbar-right
+  %nav.navbar.navbar-expand-lg.navbar-light.navbar-right.global-nav
     .container
       = link_to "PCPART", root_path, class: "navbar-brand"
       %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
