--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,9 +1,8 @@
-.row.p-3{
-  h2 {
+.container{
+  h2.heading {
     text-align: left;
     margin-bottom: 0.5em;
     font-size: 1.5rem;
-    width: 1170px;
     height: 33px;
   }
   .panel.panel-default{
