表示のレイアウトがバラバラになっていたのを修正

--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -6,7 +6,7 @@
         .card
           = image_tag post.image_url, class: "card-img-top"
           .card-body
-            %p.card-title= link_to (post.title), post
+            %p.card-title.text-truncate= link_to (post.title), post
             %p.card-genre= (post.category.name)
             %span.card-price= "¥#{number_with_delimiter(post.price)}" 
             .star
