--- a/app/views/posts/_posts.html.haml
+++ b/app/views/posts/_posts.html.haml
@@ -1,14 +1,13 @@
 .album.py-5
   %h1.newitems 新着アイテム
   .container
-    .row
-      .post
+    .row.align-items-start
       - @posts.each do |post|
         .col-lg-3.col-md-6
           .card
             = image_tag post.image_url, class: "card-img-top"
             .card-body
-              %p.card-title= link_to (post.title), post
+              %p.card-title.text-truncate= link_to (post.title), post
               %p.card-genre= (post.category.name)
               %span.card-price= "¥#{post.price.to_s(:delimited)}"
               .star
