記載変数変更

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -17,4 +17,4 @@
 %nav{"aria-label" => "Page navigation example"}
   %ul.pagination
     %li.page-item
-      = paginate @comments
+      = paginate @posts
