新規投稿のフォームに余白追加。number_fieldからtext_fieldに変更

--- a/app/assets/stylesheets/_new.scss
+++ b/app/assets/stylesheets/_new.scss
@@ -6,7 +6,9 @@
     margin-right: 10px;
     margin-left: auto;
   }
-
+  .form-inline{
+    margin-bottom: 1rem;
+  }
   .price_number{
     text-align: right;
   }
