--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -31,15 +31,18 @@
     text-align: right;
     cursor: pointer;
     & i{
+      color: #333;
       text-align: right;
-      font-size: 20px;
-      color: #333;  
-    }
-    .span{
       font-size: 20px;
     }
     ul{
       text-align: left;
+      li{
+        padding-left: 5px;
+      }
+    }
+    .span{
+      font-size: 20px;
     }
   }
   &__background{
