--- a/app/views/posts/_posts.html.haml
+++ b/app/views/posts/_posts.html.haml
@@ -5,7 +5,7 @@
       - @posts.each do |post|
         .col-lg-3.col-md-6
           .card
-            = image_tag post.image_url, class: "card-img-top"
+            = link_to image_tag(post.image_url, class: "card-img-top"), post
             .card-body
               %p.card-title.text-truncate= link_to (post.title), post
               %p.card-genre= (post.category.name)
