詳細画面の商品名、価格　カテゴリーの表示位置統一とボタンの下に余白を追加

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,15 +9,18 @@
             = image_tag @posts.image_url, class: "card-img-top"
           .panel-body
     .col-md-8
-      %h4= @posts.title
       %table.table
         %tbody
           %tr
-            %th 価格
+            %th 商品名:
+            %td
+              = @posts.title
+          %tr
+            %th 価格:
             %td
               ¥#{number_with_delimiter(@posts.price)}
           %tr
-            %th カテゴリー
+            %th カテゴリー:
             %td= @posts.category.name
       .buttons.text-coenter
         = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary'
