--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -12,13 +12,15 @@
 .col-md-8{
   float: left;
   border: 1px solid black;
-  h4{
+  th{
     padding-left: 10px;
     margin: 15px 0;
     font-size: 18px;
+    width: 136px;
   }
   .buttons.text-coenter{
     text-align: center;
+    padding-bottom: 5px;
     .btn.btn-outline-warning{
       background-color: white;
     }
