--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -23,11 +23,11 @@
             %th カテゴリー:
             %td= @posts.category.name
       .buttons.text-coenter
-        = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary'
-        = link_to 'Amazonで詳しく見る', "https://www.amazon.co.jp/?&tag=hydraamazonav-22&ref=pd_sl_7ibq2d37on_e&adgrpid=56100363354&hvpone=&hvptwo=&hvadid=289260145877&hvpos=&hvnetw=g&hvrand=3347013380854867307&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1009540&hvtargid=kwd-10573980&hydadcr=27922_11415158&gclid=Cj0KCQjws536BRDTARIsANeUZ5-acf2wUuJzUVWFp9nIZrlEVDS-3bPYRtTi0xOqAIInIvODQsFrhREaAgZ1EALw_wcB", class: 'btn btn-outline-warning'
-        = link_to '価格.comで詳しく見る', "https://kakaku.com/", class: 'btn btn-info'
-        = link_to 'ツクモで詳しく見る', "https://shop.tsukumo.co.jp/", class: 'btn btn-success'
-        = link_to 'ドスパラで詳しく見る', "https://www.dospara.co.jp/?utm_source=google&utm_medium=cpc&utm_campaign=gsl_brand&utm_term=gsl_brand&utm_content=0000009&_bdadid=JPGTE5.01c4000o&gclid=Cj0KCQjwqfz6BRD8ARIsAIXQCf1gudbEj7QgQ3uGjYOoxxPLt3TTkblk5twlMJiEsgIJogOq_siTQIcaAkPEEALw_wcB", class: 'btn btn-outline-info'
+        = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary', target: :_blank, rel: "noopener noreferrer"
+        = link_to 'Amazonで詳しく見る', "https://www.amazon.co.jp/?&tag=hydraamazonav-22&ref=pd_sl_7ibq2d37on_e&adgrpid=56100363354&hvpone=&hvptwo=&hvadid=289260145877&hvpos=&hvnetw=g&hvrand=3347013380854867307&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1009540&hvtargid=kwd-10573980&hydadcr=27922_11415158&gclid=Cj0KCQjws536BRDTARIsANeUZ5-acf2wUuJzUVWFp9nIZrlEVDS-3bPYRtTi0xOqAIInIvODQsFrhREaAgZ1EALw_wcB", class: 'btn btn-outline-warning', target: :_blank, rel: "noopener noreferrer"
+        = link_to '価格.comで詳しく見る', "https://kakaku.com/", class: 'btn btn-info', target: :_blank, rel: "noopener noreferrer"
+        = link_to 'ツクモで詳しく見る', "https://shop.tsukumo.co.jp/", class: 'btn btn-success', target: :_blank, rel: "noopener noreferrer"
+        = link_to 'ドスパラで詳しく見る', "https://www.dospara.co.jp/?utm_source=google&utm_medium=cpc&utm_campaign=gsl_brand&utm_term=gsl_brand&utm_content=0000009&_bdadid=JPGTE5.01c4000o&gclid=Cj0KCQjwqfz6BRD8ARIsAIXQCf1gudbEj7QgQ3uGjYOoxxPLt3TTkblk5twlMJiEsgIJogOq_siTQIcaAkPEEALw_wcB", class: 'btn btn-outline-info', target: :_blank, rel: "noopener noreferrer"
     .card-body
       %h2.heading.card-title 商品の詳細
       %p.card-text= @posts.text
