詳細画面の別先のリンクのボタンを変更

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -24,7 +24,7 @@
     .btn.btn-outline-warning{
       background-color: white;
     }
-    .btn.btn-success{
+    .btn.btn-outline-success{
       margin-top: 10px;
     }
     .btn.btn-outline-info{
