Correction of typos on the top page

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,7 +3,7 @@
     .container
     %h1.jumbotron-heading PCPARTへようこそ！
     %p.lead
-      PCPARTは普段つかっているPCパーツやな購入したPCパーツを投稿して紹介しあうサイトです。
+      PCPARTは普段つかっているPCパーツや購入したPCパーツを投稿して紹介しあうサイトです。
     .text-btn
     - if user_signed_in?
       = link_to '', root_path
